[gd_scene load_steps=11 format=3 uid="uid://8yke3hj82k58"]

[ext_resource type="Script" uid="uid://cl8126njaxgsh" path="res://scripts/game_base.gd" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://cleh4uy2co631" path="res://scripts/components/player_positions.gd" id="2_gee14"]
[ext_resource type="Script" uid="uid://37iaihodyu14" path="res://scripts/game_state_machine.gd" id="2_yqjtg"]
[ext_resource type="Script" uid="uid://dw2wug5yempa5" path="res://scripts/actors/player.gd" id="3_0tnpc"]
[ext_resource type="Script" uid="uid://btr5fqto5cmbj" path="res://scripts/game_states/loading.gd" id="3_lnu2h"]
[ext_resource type="Script" uid="uid://d4dgd2ugielfx" path="res://scripts/game_states/buying_support.gd" id="4_lbhrr"]
[ext_resource type="Texture2D" uid="uid://c76vfluog5iss" path="res://images/background.png" id="4_vtaks"]
[ext_resource type="Script" uid="uid://bbofictnr7eqc" path="res://scripts/game_states/equip.gd" id="5_iywne"]
[ext_resource type="Script" uid="uid://cf3qe0drjkd0i" path="res://scripts/game_states/attack.gd" id="6_p57ef"]
[ext_resource type="Script" uid="uid://e1fdilfulthq" path="res://scripts/game_states/locked.gd" id="16_ca42v"]

[node name="GameScene" type="Node3D"]
script = ExtResource("1_uwrxv")

[node name="Game" type="Node3D" parent="."]

[node name="Camera" type="Camera3D" parent="Game"]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 3, 0)

[node name="Light1" type="DirectionalLight3D" parent="Game"]
transform = Transform3D(1, 0, 0, 0, 0.0339576, 0.999423, 0, -0.999423, 0.0339576, 0, 9.44136, 0)

[node name="Light3" type="DirectionalLight3D" parent="Game"]
transform = Transform3D(1, 0, 0, 0, -0.975596, 0.219574, 0, -0.219574, -0.975596, 0, 3.79288, -16.4713)

[node name="Cards" type="Node" parent="Game"]

[node name="PositionComponents" type="Node" parent="Game"]

[node name="PlayerPositions" type="Node" parent="Game/PositionComponents"]
script = ExtResource("2_gee14")

[node name="Actors" type="Node" parent="Game"]

[node name="Player" type="Node" parent="Game/Actors"]
script = ExtResource("3_0tnpc")

[node name="Background" type="Sprite3D" parent="Game"]
transform = Transform3D(0.77, 0, 0, 0, -3.36578e-08, -0.77, 0, 0.77, -3.36578e-08, 0, -1.5, 0)
texture = ExtResource("4_vtaks")

[node name="GUI" type="CanvasLayer" parent="."]
physics_interpolation_mode = 2

[node name="Control" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Health" type="Label" parent="GUI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.545
anchor_top = 0.465
anchor_right = 0.602
anchor_bottom = 0.508
offset_left = 0.159973
offset_top = -0.320007
offset_right = 0.495911
offset_bottom = -0.184021
theme_override_font_sizes/font_size = 20

[node name="HealthL" type="Label" parent="GUI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.321
anchor_top = 0.282
anchor_right = 0.374
anchor_bottom = 0.326
offset_left = 0.207977
offset_top = 0.263992
offset_right = 0.151978
offset_bottom = -0.248001
theme_override_font_sizes/font_size = 20

[node name="HealthU" type="Label" parent="GUI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.545
anchor_top = 0.108
anchor_right = 0.602
anchor_bottom = 0.151
offset_left = 0.159973
offset_top = 0.0159988
offset_right = 0.495911
offset_bottom = 0.151993
theme_override_font_sizes/font_size = 20

[node name="HealthR" type="Label" parent="GUI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.76
anchor_top = 0.282
anchor_right = 0.812
anchor_bottom = 0.326
offset_left = -0.520081
offset_top = 0.263992
offset_right = 0.575928
offset_bottom = -0.248001
theme_override_font_sizes/font_size = 20

[node name="BtnPlayCard" type="Button" parent="GUI/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.773
anchor_top = 0.662
anchor_right = 0.869
anchor_bottom = 0.71
offset_left = -0.496094
offset_top = 0.0239563
offset_right = -0.0880127
offset_bottom = -0.0800171
grow_horizontal = 2
grow_vertical = 2
text = "Play Card"

[node name="LblDescription" type="Label" parent="GUI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.565
anchor_top = 0.677
anchor_right = 0.755
anchor_bottom = 0.713
offset_left = 0.119995
offset_top = -4.69604
offset_right = 0.239929
offset_bottom = -0.0240479
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BtnRestart" type="Button" parent="GUI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.867
anchor_top = 0.034
anchor_right = 0.966
anchor_bottom = 0.082
offset_left = 0.215942
offset_top = -0.0320015
offset_right = 0.167969
offset_bottom = -0.136002
text = "Restart Game"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_yqjtg")

[node name="Loading" type="Node" parent="StateMachine"]
script = ExtResource("3_lnu2h")

[node name="BuyingSupport" type="Node" parent="StateMachine"]
script = ExtResource("4_lbhrr")

[node name="Equip" type="Node" parent="StateMachine"]
script = ExtResource("5_iywne")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("6_p57ef")

[node name="Locked" type="Node" parent="StateMachine"]
script = ExtResource("16_ca42v")

[connection signal="loaded" from="." to="." method="_on_loaded"]
[connection signal="button_down" from="GUI/Control/BtnPlayCard" to="." method="_on_btn_play_card_button_down"]
[connection signal="button_up" from="GUI/Control/BtnRestart" to="." method="_on_btn_restart_button_up"]
